# SuperFokus

./: # Plan: SuperFokus - Fix Site Blocker & .prompt.md  .gitignore  MacOptimizationPlan.md  OUTSTANDING_TASKS.md  README.md  UPDATE_DOCUMENTATION.txt  VULNERABILITY_REPORT.md  fokus-sb-helper.js  fullscreen-popup.html  fullscreen-popup.js  index.html  main-folder-actions.txt  main.js  package-lock.json  package.json  planned-updates  pomo-timer.html  pomo-timer.js  popup.html  popup.js  preload.js  renderer.js  spec.md  temp_workflows.js  test-app.js  test-app2.js  test-app3.js  test-app4.js  test-env.js  test-main.js  test-main2.js  test-proxy.js  utils.js
specs/: Autoclose-spec.md  Codebase-Restructuring-Spec.md  MacSiteBlocker-plan.mb  MacSiteBlocker-spec.md  Renderer-Audit-Report.md  mfokus1.0.0_plan.md  planned-updates  update-template.md
specs/archived_single_specs/: MacPort-plan.md  MacSiteBlocker-spec.md
specs/fokus-guidelines/: flowstate-guidelines.md  healthmode-guidelines.md  microtask-guidelines.md  pomostyle-guidelines.md  repeating-guidelines.md  siteblocker-guidelines.md
specs/major_updates/: FOKUS-v1.0_RELEASE.md  OG-SPEC.md  RUST-INTEGRATION.md  mfokus1.0.0.md
specs/minor_updates/: IPC-AUDIT-2026-05-16.md  Mfokus-v0.9.6.md  Wfokus-v0.9.5.md  Wfokus-v0.9.6.md  fokus-v0.9.1.md  fokus-v0.9.3.md  optimization-report.md  sound-links.txt  wfokus-v1.0.0-beta.md
src/main/: fokus-sb-helper.js  main.js  preload.js
src/native/: Cargo.toml
src/native/bridge/: Cargo.toml  build.rs
src/native/bridge/src/: lib.rs
src/renderer/: dom-init.js  renderer.js  (+1 more)
(+63 files in other folders)
