[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.10.3"
napi-derive = "2.10.3"
napi-build = "2.0.1"

# Local path dependencies to our other crates
watcher = { path = "../watcher" }
guardian = { path = "../guardian" }
timer = { path = "../timer" }

[build-dependencies]
napi-build = "2.0.1"
